# aoc22

./: CMakeCache.txt  CMakeLists.txt  Makefile  README.md  aoc18  cmake_install.cmake
inc/: Default_includes.hpp  Solution.hpp
src/: Day01.cpp  Day02.cpp  Day03.cpp  Day04.cpp  Day05.cpp  Day06.cpp  Runner.cpp  Solution.cpp
